<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_nav_main"
    app:startDestination="@id/navigation_journal_view">

    <fragment
        android:id="@+id/navigation_account_create"
        android:name="com.example.aida.views.RegisterFragment"
        android:label="@string/title_acc_create"
        tools:layout="@layout/fragment_register"/>

    <fragment
        android:id="@+id/navigation_account_edit"
        android:name="com.example.aida.views.AccountEditFragment"
        android:label="@string/title_acc_edit"
        tools:layout="@layout/fragment_account_edit"/>

    <fragment
        android:id="@+id/navigation_account_view"
        android:name="com.example.aida.views.AccountViewFragment"
        android:label="@string/title_acc_view"
        tools:layout="@layout/fragment_account_view"/>

    <fragment
        android:id="@+id/navigation_foods_view"
        android:name="com.example.aida.views.FoodsViewFragment"
        android:label="@string/title_foods"
        tools:layout="@layout/fragment_foods_view"/>

    <fragment
        android:id="@+id/navigation_journal_add_entry"
        android:name="com.example.aida.views.JournalAddFragment"
        android:label="@string/title_journal_entry_add"
        tools:layout="@layout/fragment_journal_add"/>

    <fragment
        android:id="@+id/navigation_journal_edit_entry"
        android:name="com.example.aida.views.JournalEditFragment"
        android:label="@string/title_journal_entry_edit"
        tools:layout="@layout/fragment_journal_edit"/>

    <fragment
        android:id="@+id/navigation_journal_view"
        android:name="com.example.aida.views.JournalViewFragment"
        android:label="@string/title_journal_view"
        tools:layout="@layout/fragment_journal_view"/>

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.aida.views.LoginFragment"
        android:label="@string/title_meal"
        tools:layout="@layout/fragment_login"/>

    <fragment
        android:id="@+id/navigation_meal_calculator"
        android:name="com.example.aida.views.MealCalculatorFragment"
        android:label="@string/title_meal"
        tools:layout="@layout/fragment_meal_calculator"/>

    <fragment
        android:id="@+id/navigation_edit_temp"
        android:name="com.example.aida.views.AccountManagement"
        android:label="Temp Edit"
        tools:layout="@layout/fragment_account_management" />
</navigation>