<?xml version="1.0" encoding="utf-8"?>

<!-- TODO: Add Top Bar -->
<!-- TODO: Implement ViewModel Bindings-->
<!-- TODO: Refine Appearance -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.FoodsDatabaseActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/cntNavigationFDA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tabMode="scrollable">

        <com.google.android.material.tabs.TabItem
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/lbl_nl_journal"/>
        <com.google.android.material.tabs.TabItem
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/lbl_nl_foods"/>
        <com.google.android.material.tabs.TabItem
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/lbl_nl_profile"/>
        <com.google.android.material.tabs.TabItem
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/lbl_nl_Meal"/>
        <com.google.android.material.tabs.TabItem
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/lbl_nl_Menu"/>
    </com.google.android.material.tabs.TabLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lstFoodsFDA"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cntNavigationFDA">

    </androidx.recyclerview.widget.RecyclerView>
</androidx.constraintlayout.widget.ConstraintLayout>